[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Common"
authors = [
  { name = "Fadiga Ibrahima", email = "faddev@gmail.com" },
]
keywords = ["q5"]
requires-python = ">=3.8"
description = "Pyqt Common Project"
#readme = "README.md"
version = "0.1.4"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "peewee>=3.0.0",
  "PyQt5>=5.0.0",
  "requests>=2.0.0",
  "psutil>=5.9.0",
]
