[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Common"
authors = [
  { name = "Fadiga Ibrahima", email = "faddev@gmail.com" },
]
keywords = ["q5"]
requires-python = ">=3.8"
description = "Pyqt Common Project"
#readme = "README.md"
version = "0.2.0"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "peewee>=3.17.1",
  "PyQt5>=5.15.10",
  "requests>=2.0.0",
  "psutil>=5.9.0",
  "gettext_windows>=1.0"
]
